
      \item Package \pkg{tools} has a new function \code{compactPDF()}
      to try to reduce the size of PDF files \emph{via} \command{qpdf}
      or \command{gs}.

      \item \code{tar()} has a new argument \code{extra_flags}.

      \item \code{dotchart()} accepts more general objects \code{x} such
      as 1D tables which can be coerced by \code{as.numeric()} to a
      numeric vector, with a warning since that might not be appropriate.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD Rdiff} is now implemented in \R on
      Unix-alikes (as it has been on Windows since \R 2.12.0).

      \item \command{R CMD build} no longer does any cleaning in the
      supplied package directory: all the cleaning is done in the copy.

      It has a new option \option{--install-args} to pass arguments to
      \command{R CMD INSTALL} for \option{--build} (but not when
      installing to rebuild vignettes).

      There is new option, \option{--resave-data}, to call
      \code{tools::resaveRdaFiles()} on the \file{data} directory, to
      compress tabular files (\file{.tab}, \file{.csv} etc) and to
      convert \file{.R} files to \file{.rda} files.  The default,
      \option{--resave-data=gzip}, is to do so in a way compatible even
      with years-old versions of \R, but better compression is given by
      \option{--resave-data=best}, requiring \R >= 2.10.0.

      It now adds a \file{datalist} file for \file{data} directories of
      more than 1Mb.

      Patterns in \file{.Rbuildignore} are now also matched against all
      directory names (including those of empty directories).
