@@ -271,7 +271,12 @@
 
       \item \code{dotchart()} accepts more general objects \code{x} such
       as 1D tables which can be coerced by \code{as.numeric()} to a
-      numeric vector, with a warning since that might not be appropriate.
+      numeric vector, with a warning since that might not be
+      appropriate.
+
+      \item \item{bug.report()} gains a new \code{method="mailto"} on
+      Unix-alikes similar to that on Windows: it invokes a default
+      mailer via \command{open} (Mac OS X) or \code{xdg-open} (elsewhere).
     }
   }
 
